toggle bar on mobile issue resolved

--- a/angular-src/src/app/search-doc/search-doc.component.css
+++ b/angular-src/src/app/search-doc/search-doc.component.css
@@ -11,7 +11,7 @@ margin-left: 90%;
 	margin:0;
 	margin-top: 10px;
 	padding: 0;
-	margin-left: 277px;
+	margin-left: 25.5%;
 }
 
 #custom-search-input .search-query {
